package to Docker without pagination